---------------------------------------------------------------------------------------------------
Version: 999.999.999
Date: 9999-99-99
  Changes:
  Features:
    - Based off of "Beyond Vanila -QoL" modpack.
      - Re-enables technologies and features from "Pavement Drive Assist Continued".
      - Re-enables technologies and features from "Spidertron Patrols".
    - End game
      - Increase victory condition complexity and difficulty (via "Space Extension Mod")
      - Obtain raw resources through rocket launches/asteroid mining (via "Asteroid Mining")
    - Power Generation
      - Fluids-based boilers and early steam turbines (via "Superheating")
      - Plutonium power and weapon production chains (via "PlutoniumEnergy")
      - Store excess energy as steam using electric boilers (via "Electric Boiler")
      - Utilise wall-estate for generating clean power (via "Solar Walls")
      - Utilise wall-estate for storing excess power (via "Accumulator Walls")
      - Higher-tier solar power production (via "Advanced Solar HR")
      - Traversable solar panels (via "Flat Solar Panels - Solar Freakin' Roadway")
    - Logistics
      - Restrict pipe connections and control fluid flow (via "Flow Control")
      - Configure input/output layout for fluid-based crafting (via "Fluid Permutations Fixed")
      - Small tank for storing fluids (via "Extra Storage Tank: Minibuffer")
      - Large tank for storing fluids (via "Large Storage Tank")
      - Specialised pipes for increased long distance fluid flow (via "Fluid Must Flow")
      - Improved construction and logistic robots (via "Hercules Robots")
      - Additional larger variants of chests (via "AAI Containers")
    - Visuals
      - Realistic nuclear reactor glow (via "Realistic Reactor Glow")
      - Improved heat pipe glow (via "Realistic Heat Glow")
      - Realistic ore textures/colours (via "Realistic Ores")
      - Remove ground decorations from concrete (via "Cleaned Concrete")
  Bugfixes: