@@ -26,6 +26,7 @@
         "Realistic_Heat_Glow >= 2.1.0",
         "RealisticReactorGlow >= 1.101.7",
         "RealisticOres >= 7.101.1",
+        "Side Inserters >= 2.4.0",
         "SpaceMod >= 1.1.3",
         "Superheating >= 1.0.3",
         "solar-walls >= 0.0.16"
