@@ -25,6 +25,7 @@ Date: 9999-99-99
       - Specialised pipes for increased long distance fluid flow (via "Fluid Must Flow")
       - Improved construction and logistic robots (via "Hercules Robots")
       - Additional larger variants of chests (via "AAI Containers")
+      - Configurable inserter drop-off/pick-up positions (via "Side Inserters")
     - Visuals
       - Realistic nuclear reactor glow (via "Realistic Reactor Glow")
       - Improved heat pipe glow (via "Realistic Heat Glow")
